// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdnyYQ sc-gtsseb cTuWZN sXyhO"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdnyYQ sc-gtsseb leWrYK sXyhO"
>
  foo
</button>
`;
